# tonuino-audio-manager

./: LICENSE  README.md  THIRD_PARTY_NOTICES  TODO.md  nfc_write_tag_prompt.txt  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/tonuinoaudiomanager/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  lamejni.c
app/src/main/cpp/lame/: config.h
app/src/main/cpp/lame/libmp3lame/: fft.c  gain_analysis.c  newmdct.c  psymodel.c  quantize.c  quantize_pvt.c  tables.c  takehiro.c  vbrquantize.c
app/src/main/java/com/example/tonuinoaudiomanager/: ContentResolverSync.kt  FirstFragment.kt  MainActivity.kt  Media3Mp3Converter.kt  MediaCodecMp3Converter.kt  ReadNfcActivity.kt  ReorderAdapter.kt  (+3 more)
app/src/main/res/drawable/: ic_add_file_24.xml  ic_add_folder_24.xml  ic_arrow_back_24.xml  ic_arrow_upward_24.xml  ic_drag_handle_24.xml  ic_file_24.xml  ic_folder_24.xml  ic_nfc_24.xml  ic_reorder_24.xml
app/src/main/res/layout/: activity_main.xml  activity_read_nfc.xml  activity_write_nfc.xml  bottom_sheet_item_actions.xml  dialog_copy_progress.xml  dialog_transcode_progress.xml  item_reorder_file.xml  item_usb_file.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/main/res/xml/: nfc_tech_filter.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+6 files in other folders)
